# MIOT

example1/: main.cpp
example2/: CMakeLists.txt  main.cpp  version.cpp  version.h
example3/: CMakeLists.txt  main.cpp  version.cpp  version.h
example4/lib/: CMakeLists.txt  lib.cpp  lib.h
example4/src/: CMakeLists.txt  main.cpp
